patito/y.output

state 0
	$accept: .input $end 

	PROGRAMA  shift 3
	.  error

	input  goto 1
	programa  goto 2

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  programa.    (1)

	.  reduce 1 (src line 46)


state 3
	programa:  PROGRAMA.ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN 

	ID  shift 4
	.  error


state 4
	programa:  PROGRAMA ID.PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN 

	PUNTOCOMA  shift 5
	.  error


state 5
	programa:  PROGRAMA ID PUNTOCOMA.$$2 vars funcs INICIO $$3 cuerpo FIN 
	$$2: .    (2)

	.  reduce 2 (src line 50)

	$$2  goto 6

state 6
	programa:  PROGRAMA ID PUNTOCOMA $$2.vars funcs INICIO $$3 cuerpo FIN 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 68)

	vars  goto 7

state 7
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars.funcs INICIO $$3 cuerpo FIN 
	funcs: .    (14)

	ENTERO  shift 14
	FLOTANTE  shift 15
	NULA  shift 13
	.  reduce 14 (src line 101)

	tipo  goto 12
	tipo_retorno  goto 11
	funcs  goto 9
	func  goto 10

state 8
	vars:  VARS.lista_ids DOSPUNTOS tipo PUNTOCOMA $$5 vars 

	ID  shift 17
	.  error

	lista_ids  goto 16

state 9
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs.INICIO $$3 cuerpo FIN 

	INICIO  shift 18
	.  error


state 10
	funcs:  func.funcs 
	funcs: .    (14)

	ENTERO  shift 14
	FLOTANTE  shift 15
	NULA  shift 13
	.  reduce 14 (src line 101)

	tipo  goto 12
	tipo_retorno  goto 11
	funcs  goto 19
	func  goto 10

state 11
	func:  tipo_retorno.ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 

	ID  shift 20
	.  error


state 12
	tipo_retorno:  tipo.    (17)

	.  reduce 17 (src line 117)


state 13
	tipo_retorno:  NULA.    (18)

	.  reduce 18 (src line 122)


state 14
	tipo:  ENTERO.    (11)

	.  reduce 11 (src line 88)


state 15
	tipo:  FLOTANTE.    (12)

	.  reduce 12 (src line 93)


state 16
	vars:  VARS lista_ids.DOSPUNTOS tipo PUNTOCOMA $$5 vars 

	DOSPUNTOS  shift 21
	.  error


state 17
	lista_ids:  ID.lista_ids_prima 
	lista_ids_prima: .    (10)

	COMA  shift 23
	.  reduce 10 (src line 83)

	lista_ids_prima  goto 22

state 18
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO.$$3 cuerpo FIN 
	$$3: .    (3)

	.  reduce 3 (src line 55)

	$$3  goto 24

state 19
	funcs:  func funcs.    (13)

	.  reduce 13 (src line 99)


state 20
	func:  tipo_retorno ID.$$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 
	$$15: .    (15)

	.  reduce 15 (src line 104)

	$$15  goto 25

state 21
	vars:  VARS lista_ids DOSPUNTOS.tipo PUNTOCOMA $$5 vars 

	ENTERO  shift 14
	FLOTANTE  shift 15
	.  error

	tipo  goto 26

state 22
	lista_ids:  ID lista_ids_prima.    (8)

	.  reduce 8 (src line 71)


state 23
	lista_ids_prima:  COMA.ID lista_ids_prima 

	ID  shift 27
	.  error


state 24
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3.cuerpo FIN 

	LLAVE_IZQ  shift 29
	.  error

	cuerpo  goto 28

state 25
	func:  tipo_retorno ID $$15.PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 

	PAR_IZQ  shift 30
	.  error


state 26
	vars:  VARS lista_ids DOSPUNTOS tipo.PUNTOCOMA $$5 vars 

	PUNTOCOMA  shift 31
	.  error


state 27
	lista_ids_prima:  COMA ID.lista_ids_prima 
	lista_ids_prima: .    (10)

	COMA  shift 23
	.  reduce 10 (src line 83)

	lista_ids_prima  goto 32

state 28
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo.FIN 

	FIN  shift 33
	.  error


state 29
	cuerpo:  LLAVE_IZQ.estatutos LLAVE_DER 
	estatutos: .    (27)

	SI  shift 42
	MIENTRAS  shift 43
	ESCRIBE  shift 44
	ID  shift 41
	.  reduce 27 (src line 152)

	estatutos  goto 34
	estatuto  goto 35
	asigna  goto 36
	condicion  goto 37
	ciclo  goto 38
	llamada  goto 39
	imprime  goto 40

state 30
	func:  tipo_retorno ID $$15 PAR_IZQ.params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 
	params: .    (21)

	ID  shift 46
	.  reduce 21 (src line 134)

	params  goto 45

state 31
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA.$$5 vars 
	$$5: .    (5)

	.  reduce 5 (src line 62)

	$$5  goto 47

state 32
	lista_ids_prima:  COMA ID lista_ids_prima.    (9)

	.  reduce 9 (src line 78)


state 33
	programa:  PROGRAMA ID PUNTOCOMA $$2 vars funcs INICIO $$3 cuerpo FIN.    (4)

	.  reduce 4 (src line 59)


state 34
	cuerpo:  LLAVE_IZQ estatutos.LLAVE_DER 

	LLAVE_DER  shift 48
	.  error


state 35
	estatutos:  estatuto.estatutos 
	estatutos: .    (27)

	SI  shift 42
	MIENTRAS  shift 43
	ESCRIBE  shift 44
	ID  shift 41
	.  reduce 27 (src line 152)

	estatutos  goto 49
	estatuto  goto 35
	asigna  goto 36
	condicion  goto 37
	ciclo  goto 38
	llamada  goto 39
	imprime  goto 40

state 36
	estatuto:  asigna.    (28)

	.  reduce 28 (src line 155)


state 37
	estatuto:  condicion.    (29)

	.  reduce 29 (src line 157)


state 38
	estatuto:  ciclo.    (30)

	.  reduce 30 (src line 158)


state 39
	estatuto:  llamada.PUNTOCOMA 

	PUNTOCOMA  shift 50
	.  error


state 40
	estatuto:  imprime.    (32)

	.  reduce 32 (src line 160)


state 41
	asigna:  ID.ASIGNA expresion PUNTOCOMA 
	llamada:  ID.$$42 PAR_IZQ argumentos PAR_DER 
	$$42: .    (42)

	ASIGNA  shift 51
	.  reduce 42 (src line 212)

	$$42  goto 52

state 42
	condicion:  SI.PAR_IZQ expresion PAR_DER $$34 cuerpo sino_opc PUNTOCOMA 

	PAR_IZQ  shift 53
	.  error


state 43
	ciclo:  MIENTRAS.$$39 PAR_IZQ expresion PAR_DER $$40 HAZ cuerpo PUNTOCOMA 
	$$39: .    (39)

	.  reduce 39 (src line 197)

	$$39  goto 54

state 44
	imprime:  ESCRIBE.PAR_IZQ imprime_args PAR_DER PUNTOCOMA 

	PAR_IZQ  shift 55
	.  error


state 45
	func:  tipo_retorno ID $$15 PAR_IZQ params.PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 

	PAR_DER  shift 56
	.  error


state 46
	params:  ID.DOSPUNTOS tipo $$19 params_prima 

	DOSPUNTOS  shift 57
	.  error


state 47
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA $$5.vars 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 68)

	vars  goto 58

state 48
	cuerpo:  LLAVE_IZQ estatutos LLAVE_DER.    (25)

	.  reduce 25 (src line 146)


state 49
	estatutos:  estatuto estatutos.    (26)

	.  reduce 26 (src line 150)


state 50
	estatuto:  llamada PUNTOCOMA.    (31)

	.  reduce 31 (src line 159)


state 51
	asigna:  ID ASIGNA.expresion PUNTOCOMA 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 59
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 52
	llamada:  ID $$42.PAR_IZQ argumentos PAR_DER 

	PAR_IZQ  shift 71
	.  error


state 53
	condicion:  SI PAR_IZQ.expresion PAR_DER $$34 cuerpo sino_opc PUNTOCOMA 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 72
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 54
	ciclo:  MIENTRAS $$39.PAR_IZQ expresion PAR_DER $$40 HAZ cuerpo PUNTOCOMA 

	PAR_IZQ  shift 73
	.  error


state 55
	imprime:  ESCRIBE PAR_IZQ.imprime_args PAR_DER PUNTOCOMA 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	LETRERO  shift 77
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 76
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68
	imprime_args  goto 74
	imprime_val  goto 75

state 56
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER.LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA 

	LLAVE_IZQ  shift 78
	.  error


state 57
	params:  ID DOSPUNTOS.tipo $$19 params_prima 

	ENTERO  shift 14
	FLOTANTE  shift 15
	.  error

	tipo  goto 79

state 58
	vars:  VARS lista_ids DOSPUNTOS tipo PUNTOCOMA $$5 vars.    (6)

	.  reduce 6 (src line 67)


state 59
	asigna:  ID ASIGNA expresion.PUNTOCOMA 

	PUNTOCOMA  shift 80
	.  error


state 60
	expresion:  exp.    (56)
	expresion:  exp.MAYOR $$57 exp 
	expresion:  exp.MENOR $$59 exp 
	expresion:  exp.DIF $$61 exp 
	expresion:  exp.IGUAL $$63 exp 
	exp:  exp.MAS $$65 termino 
	exp:  exp.MENOS $$67 termino 

	MAS  shift 85
	MENOS  shift 86
	MAYOR  shift 81
	MENOR  shift 82
	DIF  shift 83
	IGUAL  shift 84
	.  reduce 56 (src line 275)


state 61
	exp:  termino.    (69)
	termino:  termino.MULT $$70 factor 
	termino:  termino.DIVIDE $$72 factor 

	MULT  shift 87
	DIVIDE  shift 88
	.  reduce 69 (src line 337)


state 62
	termino:  factor.    (74)

	.  reduce 74 (src line 363)


state 63
	factor:  PAR_IZQ.expresion PAR_DER 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 89
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 64
	factor:  MAS.factor 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	factor  goto 90
	cte  goto 67
	llamada  goto 68

state 65
	factor:  MENOS.factor 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	factor  goto 91
	cte  goto 67
	llamada  goto 68

state 66
	llamada:  ID.$$42 PAR_IZQ argumentos PAR_DER 
	factor:  ID.    (78)
	$$42: .    (42)

	PAR_IZQ  reduce 42 (src line 212)
	.  reduce 78 (src line 382)

	$$42  goto 52

state 67
	factor:  cte.    (79)

	.  reduce 79 (src line 388)


state 68
	factor:  llamada.    (80)

	.  reduce 80 (src line 392)


state 69
	cte:  CTE_ENT.    (81)

	.  reduce 81 (src line 398)


state 70
	cte:  CTE_FLOT.    (82)

	.  reduce 82 (src line 405)


state 71
	llamada:  ID $$42 PAR_IZQ.argumentos PAR_DER 
	argumentos: .    (46)

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  reduce 46 (src line 234)

	expresion  goto 93
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68
	argumentos  goto 92

state 72
	condicion:  SI PAR_IZQ expresion.PAR_DER $$34 cuerpo sino_opc PUNTOCOMA 

	PAR_DER  shift 94
	.  error


state 73
	ciclo:  MIENTRAS $$39 PAR_IZQ.expresion PAR_DER $$40 HAZ cuerpo PUNTOCOMA 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 95
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 74
	imprime:  ESCRIBE PAR_IZQ imprime_args.PAR_DER PUNTOCOMA 

	PAR_DER  shift 96
	.  error


state 75
	imprime_args:  imprime_val.imprime_args_prima 
	imprime_args_prima: .    (53)

	COMA  shift 98
	.  reduce 53 (src line 259)

	imprime_args_prima  goto 97

state 76
	imprime_val:  expresion.    (54)

	.  reduce 54 (src line 262)


state 77
	imprime_val:  LETRERO.    (55)

	.  reduce 55 (src line 268)


state 78
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ.vars cuerpo LLAVE_DER PUNTOCOMA 
	vars: .    (7)

	VARS  shift 8
	.  reduce 7 (src line 68)

	vars  goto 99

state 79
	params:  ID DOSPUNTOS tipo.$$19 params_prima 
	$$19: .    (19)

	.  reduce 19 (src line 128)

	$$19  goto 100

state 80
	asigna:  ID ASIGNA expresion PUNTOCOMA.    (33)

	.  reduce 33 (src line 163)


state 81
	expresion:  exp MAYOR.$$57 exp 
	$$57: .    (57)

	.  reduce 57 (src line 280)

	$$57  goto 101

state 82
	expresion:  exp MENOR.$$59 exp 
	$$59: .    (59)

	.  reduce 59 (src line 289)

	$$59  goto 102

state 83
	expresion:  exp DIF.$$61 exp 
	$$61: .    (61)

	.  reduce 61 (src line 298)

	$$61  goto 103

state 84
	expresion:  exp IGUAL.$$63 exp 
	$$63: .    (63)

	.  reduce 63 (src line 307)

	$$63  goto 104

state 85
	exp:  exp MAS.$$65 termino 
	$$65: .    (65)

	.  reduce 65 (src line 318)

	$$65  goto 105

state 86
	exp:  exp MENOS.$$67 termino 
	$$67: .    (67)

	.  reduce 67 (src line 328)

	$$67  goto 106

state 87
	termino:  termino MULT.$$70 factor 
	$$70: .    (70)

	.  reduce 70 (src line 344)

	$$70  goto 107

state 88
	termino:  termino DIVIDE.$$72 factor 
	$$72: .    (72)

	.  reduce 72 (src line 354)

	$$72  goto 108

state 89
	factor:  PAR_IZQ expresion.PAR_DER 

	PAR_DER  shift 109
	.  error


state 90
	factor:  MAS factor.    (76)

	.  reduce 76 (src line 374)


state 91
	factor:  MENOS factor.    (77)

	.  reduce 77 (src line 378)


state 92
	llamada:  ID $$42 PAR_IZQ argumentos.PAR_DER 

	PAR_DER  shift 110
	.  error


state 93
	argumentos:  expresion.$$44 argumentos_prima 
	$$44: .    (44)

	.  reduce 44 (src line 225)

	$$44  goto 111

state 94
	condicion:  SI PAR_IZQ expresion PAR_DER.$$34 cuerpo sino_opc PUNTOCOMA 
	$$34: .    (34)

	.  reduce 34 (src line 174)

	$$34  goto 112

state 95
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion.PAR_DER $$40 HAZ cuerpo PUNTOCOMA 

	PAR_DER  shift 113
	.  error


state 96
	imprime:  ESCRIBE PAR_IZQ imprime_args PAR_DER.PUNTOCOMA 

	PUNTOCOMA  shift 114
	.  error


state 97
	imprime_args:  imprime_val imprime_args_prima.    (51)

	.  reduce 51 (src line 253)


state 98
	imprime_args_prima:  COMA.imprime_val imprime_args_prima 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	LETRERO  shift 77
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 76
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68
	imprime_val  goto 115

state 99
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars.cuerpo LLAVE_DER PUNTOCOMA 

	LLAVE_IZQ  shift 29
	.  error

	cuerpo  goto 116

state 100
	params:  ID DOSPUNTOS tipo $$19.params_prima 
	params_prima: .    (24)

	COMA  shift 118
	.  reduce 24 (src line 143)

	params_prima  goto 117

state 101
	expresion:  exp MAYOR $$57.exp 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	exp  goto 119
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 102
	expresion:  exp MENOR $$59.exp 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	exp  goto 120
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 103
	expresion:  exp DIF $$61.exp 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	exp  goto 121
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 104
	expresion:  exp IGUAL $$63.exp 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	exp  goto 122
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 105
	exp:  exp MAS $$65.termino 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	termino  goto 123
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 106
	exp:  exp MENOS $$67.termino 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	termino  goto 124
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 107
	termino:  termino MULT $$70.factor 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	factor  goto 125
	cte  goto 67
	llamada  goto 68

state 108
	termino:  termino DIVIDE $$72.factor 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	factor  goto 126
	cte  goto 67
	llamada  goto 68

state 109
	factor:  PAR_IZQ expresion PAR_DER.    (75)

	.  reduce 75 (src line 369)


state 110
	llamada:  ID $$42 PAR_IZQ argumentos PAR_DER.    (43)

	.  reduce 43 (src line 218)


state 111
	argumentos:  expresion $$44.argumentos_prima 
	argumentos_prima: .    (49)

	COMA  shift 128
	.  reduce 49 (src line 246)

	argumentos_prima  goto 127

state 112
	condicion:  SI PAR_IZQ expresion PAR_DER $$34.cuerpo sino_opc PUNTOCOMA 

	LLAVE_IZQ  shift 29
	.  error

	cuerpo  goto 129

state 113
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion PAR_DER.$$40 HAZ cuerpo PUNTOCOMA 
	$$40: .    (40)

	.  reduce 40 (src line 202)

	$$40  goto 130

state 114
	imprime:  ESCRIBE PAR_IZQ imprime_args PAR_DER PUNTOCOMA.    (50)

	.  reduce 50 (src line 249)


state 115
	imprime_args_prima:  COMA imprime_val.imprime_args_prima 
	imprime_args_prima: .    (53)

	COMA  shift 98
	.  reduce 53 (src line 259)

	imprime_args_prima  goto 131

state 116
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo.LLAVE_DER PUNTOCOMA 

	LLAVE_DER  shift 132
	.  error


state 117
	params:  ID DOSPUNTOS tipo $$19 params_prima.    (20)

	.  reduce 20 (src line 133)


state 118
	params_prima:  COMA.ID DOSPUNTOS tipo $$22 params_prima 

	ID  shift 133
	.  error


state 119
	expresion:  exp MAYOR $$57 exp.    (58)
	exp:  exp.MAS $$65 termino 
	exp:  exp.MENOS $$67 termino 

	MAS  shift 85
	MENOS  shift 86
	.  reduce 58 (src line 284)


state 120
	expresion:  exp MENOR $$59 exp.    (60)
	exp:  exp.MAS $$65 termino 
	exp:  exp.MENOS $$67 termino 

	MAS  shift 85
	MENOS  shift 86
	.  reduce 60 (src line 293)


state 121
	expresion:  exp DIF $$61 exp.    (62)
	exp:  exp.MAS $$65 termino 
	exp:  exp.MENOS $$67 termino 

	MAS  shift 85
	MENOS  shift 86
	.  reduce 62 (src line 302)


state 122
	expresion:  exp IGUAL $$63 exp.    (64)
	exp:  exp.MAS $$65 termino 
	exp:  exp.MENOS $$67 termino 

	MAS  shift 85
	MENOS  shift 86
	.  reduce 64 (src line 311)


state 123
	exp:  exp MAS $$65 termino.    (66)
	termino:  termino.MULT $$70 factor 
	termino:  termino.DIVIDE $$72 factor 

	MULT  shift 87
	DIVIDE  shift 88
	.  reduce 66 (src line 323)


state 124
	exp:  exp MENOS $$67 termino.    (68)
	termino:  termino.MULT $$70 factor 
	termino:  termino.DIVIDE $$72 factor 

	MULT  shift 87
	DIVIDE  shift 88
	.  reduce 68 (src line 332)


state 125
	termino:  termino MULT $$70 factor.    (71)

	.  reduce 71 (src line 349)


state 126
	termino:  termino DIVIDE $$72 factor.    (73)

	.  reduce 73 (src line 358)


state 127
	argumentos:  expresion $$44 argumentos_prima.    (45)

	.  reduce 45 (src line 233)


state 128
	argumentos_prima:  COMA.expresion $$47 argumentos_prima 

	ID  shift 66
	CTE_ENT  shift 69
	CTE_FLOT  shift 70
	MAS  shift 64
	MENOS  shift 65
	PAR_IZQ  shift 63
	.  error

	expresion  goto 134
	exp  goto 60
	termino  goto 61
	factor  goto 62
	cte  goto 67
	llamada  goto 68

state 129
	condicion:  SI PAR_IZQ expresion PAR_DER $$34 cuerpo.sino_opc PUNTOCOMA 
	sino_opc: .    (38)

	SINO  shift 136
	.  reduce 38 (src line 191)

	sino_opc  goto 135

state 130
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion PAR_DER $$40.HAZ cuerpo PUNTOCOMA 

	HAZ  shift 137
	.  error


state 131
	imprime_args_prima:  COMA imprime_val imprime_args_prima.    (52)

	.  reduce 52 (src line 257)


state 132
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER.PUNTOCOMA 

	PUNTOCOMA  shift 138
	.  error


state 133
	params_prima:  COMA ID.DOSPUNTOS tipo $$22 params_prima 

	DOSPUNTOS  shift 139
	.  error


state 134
	argumentos_prima:  COMA expresion.$$47 argumentos_prima 
	$$47: .    (47)

	.  reduce 47 (src line 237)

	$$47  goto 140

state 135
	condicion:  SI PAR_IZQ expresion PAR_DER $$34 cuerpo sino_opc.PUNTOCOMA 

	PUNTOCOMA  shift 141
	.  error


state 136
	sino_opc:  SINO.$$36 cuerpo 
	$$36: .    (36)

	.  reduce 36 (src line 182)

	$$36  goto 142

state 137
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion PAR_DER $$40 HAZ.cuerpo PUNTOCOMA 

	LLAVE_IZQ  shift 29
	.  error

	cuerpo  goto 143

state 138
	func:  tipo_retorno ID $$15 PAR_IZQ params PAR_DER LLAVE_IZQ vars cuerpo LLAVE_DER PUNTOCOMA.    (16)

	.  reduce 16 (src line 110)


state 139
	params_prima:  COMA ID DOSPUNTOS.tipo $$22 params_prima 

	ENTERO  shift 14
	FLOTANTE  shift 15
	.  error

	tipo  goto 144

state 140
	argumentos_prima:  COMA expresion $$47.argumentos_prima 
	argumentos_prima: .    (49)

	COMA  shift 128
	.  reduce 49 (src line 246)

	argumentos_prima  goto 145

state 141
	condicion:  SI PAR_IZQ expresion PAR_DER $$34 cuerpo sino_opc PUNTOCOMA.    (35)

	.  reduce 35 (src line 179)


state 142
	sino_opc:  SINO $$36.cuerpo 

	LLAVE_IZQ  shift 29
	.  error

	cuerpo  goto 146

state 143
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion PAR_DER $$40 HAZ cuerpo.PUNTOCOMA 

	PUNTOCOMA  shift 147
	.  error


state 144
	params_prima:  COMA ID DOSPUNTOS tipo.$$22 params_prima 
	$$22: .    (22)

	.  reduce 22 (src line 137)

	$$22  goto 148

state 145
	argumentos_prima:  COMA expresion $$47 argumentos_prima.    (48)

	.  reduce 48 (src line 245)


state 146
	sino_opc:  SINO $$36 cuerpo.    (37)

	.  reduce 37 (src line 187)


state 147
	ciclo:  MIENTRAS $$39 PAR_IZQ expresion PAR_DER $$40 HAZ cuerpo PUNTOCOMA.    (41)

	.  reduce 41 (src line 206)


state 148
	params_prima:  COMA ID DOSPUNTOS tipo $$22.params_prima 
	params_prima: .    (24)

	COMA  shift 118
	.  reduce 24 (src line 143)

	params_prima  goto 149

state 149
	params_prima:  COMA ID DOSPUNTOS tipo $$22 params_prima.    (23)

	.  reduce 23 (src line 142)


38 terminals, 52 nonterminals
83 grammar rules, 150/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
101 working sets used
memory: parser 171/240000
16 extra closures
203 shift entries, 2 exceptions
85 goto entries
75 entries saved by goto default
Optimizer space used: output 160/240000
160 table entries, 0 zero
maximum spread: 35, maximum offset: 148
